<resources>
    <string name="app_name">Telespo</string>
    <string name="slideshow">Slide Show</string>
    <string name="tools">Tools</string>
    <string name="gallery">Gallery</string>
    <string name="imports">Import</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Orders</string>
    <string name="nav_movies">Add Center</string>
    <string name="nav_uploads">Uploads</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <string-array name="business_option_array">
        <item>Select Your Business Type Option</item>
        <item>Real Estate</item>
        <item>Super Markets</item>
        <item>Food and Drinks</item>
        <item>Gym and Fitness</item>
        <item>Beauty and Saloon</item>
        <item>Hotels and G.House</item>
    </string-array>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Orders</item>
        <item>Center</item>
        <item>Uploads</item>
        <item>Settings</item>
        <item>Licences</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="long_text_example">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit,
        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
        nisi ut aliquip ex ea commodo consequat.</string>
    <string name="add_new_account_profile">Create/Update Your Center</string>
    <string name="username">username</string>
    <string name="business_name">Business Name</string>
    <string name="location_grid">Longitude and latitude</string>
    <string name="action_save">Save</string>
    <string name="user">user</string>
    <string name="location_name">Location Name</string>
    <string name="location_lat">Latitude</string>
    <string name="location_lng">Longitude</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Register now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password">Old Password</string>
    <string name="nav_add_center">Add</string>
    <string name="user_profile">User Profile</string>
    <string name="string_update">Update</string>
    <string name="string_call">\t call</string>
    <string name="string_sms">SMS</string>
    <string name="string_work">Work</string>
    <string name="demo_username">Demo Username</string>
    <string name="string_licences">Licences</string>
    <string name="image_title">Image Title</string>
    <string name="_description">Description</string>
    <string name="price">Price</string>
    <string name="nav_upload">Uploads</string>
    <string name="nav_history">Places</string>
    <string name="fname_lname">Firstname</string>
    <string name="openning_hours">Opening Time</string>
    <string name="closing_hours">Closing Time</string>
    <string name="contact_phone">Contact Number</string>
    <string name="opening_date_is_required">Opening Time in Mandatory</string>
    <string name="closing_time_is_manadatory">Clossing Time is Mandatory</string>
    <string name="email_is_required">Email Address is mandatory</string>
    <string name="phone_is_required">Phone no. is required</string>
    <string name="email_sample">developine.com@gmail.com</string>
    <string name="products">Products</string>
    <string name="search">Search</string>
    <string name="buy_now">Buy Now</string>
</resources>