<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/bottom_home"
            android:icon="@drawable/alpha_p_circle"
            android:title="@string/products" />
        <item
            android:id="@+id/bottom_notifications"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/search" />
        <item
            android:id="@+id/bottom_history"
            android:icon="@drawable/google_maps"
            android:visible="false"
            android:title="@string/nav_photos" />
        <item
            android:id="@+id/bottom_user_profile"
            android:icon="@drawable/account_settings"
            android:title="@string/user_profile" />



    </group>
</menu>