<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_photos"
        android:icon="@drawable/cash"
        android:title="@string/nav_photos"
        android:visible="false"/>
    <item
        android:id="@+id/nav_movies"
        android:icon="@drawable/credit_card"
        android:title="User Profile"
        android:visible="false"/>

    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_cloud_upload_black_24dp"
        android:title="@string/nav_upload" />

    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/settings"
        android:title="@string/nav_settings" />
</menu>