<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    tools:showIn="@layout/content_scrolling">


    <Button
        android:id="@+id/button_profile_send_sms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_sms"
        android:gravity="center"
        android:drawablePadding="@dimen/card_margin"
        android:drawableStart="@drawable/ic_sms_black_24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <Button
        android:id="@+id/button_profile_call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_call"
        android:drawableTint="#000000"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:drawableStart="@drawable/ic_call_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_profile_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="@id/button_profile_send_sms"
        app:layout_constraintTop_toBottomOf="@id/button_profile_send_sms"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <Button
        android:id="@+id/button_profile_remove_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_update"
        android:drawablePadding="5dp"
        android:drawableStart="@drawable/ic_cloud_upload_black_24dp"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintStart_toStartOf="@id/button_profile_call"
        app:layout_constraintTop_toBottomOf="@id/button_profile_call"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

</androidx.constraintlayout.widget.ConstraintLayout>